<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.examen.matias.examenm8.MainActivity">


    <TextView
        android:text="@string/tvTema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/tvNombre"
        android:layout_alignStart="@+id/tvNombre"
        android:id="@+id/tvTema" />

    <TextView
        android:text="@string/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="31dp"
        android:id="@+id/tvNombre"
        android:layout_weight="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/rgPreguntas"
        android:layout_below="@+id/tvNumPreg"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:text="@string/rb5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb5"
            android:layout_weight="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/rb10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb10"
            android:layout_weight="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/rb20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rb20" />
    </RadioGroup>

    <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etNombre"
        android:layout_alignBaseline="@+id/tvNombre"
        android:layout_alignBottom="@+id/tvNombre"
        android:layout_alignStart="@+id/rgPreguntas" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTema"
        android:spinnerMode="dialog"
        android:layout_alignTop="@+id/tvTema"
        android:layout_alignEnd="@+id/etNombre"
        android:layout_alignStart="@+id/etNombre" />

    <TextView
        android:text="@string/tvNumPreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:id="@+id/tvNumPreg"
        android:layout_below="@+id/spinnerTema"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp" />

    <Button
        android:text="@string/btContinua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMain"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/rgPreguntas"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
